# nextjs-fastapi-202407

./: # environment.yml  .env  .eslintrc.json  .gitignore  README.md  auth.config.ts  auth.ts  docker-compose.yml  eslint.config.mjs  middleware.ts  next.config.mjs  openapi-ts.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  tsconfig.json
backend/: .env  .qiniu_pythonsdk_hostscache.json  README.md  pyproject.toml
backend/aaold/routes/: demo.py  login.py  user.py  utils.py  waypoints.json
backend/aaold/utils/: str.py
backend/app/: main.py  prisma-test.py
backend/app/ai/charts/: chain.py
backend/app/api/: main.py
backend/app/api/routes/: ai.py  chat.py  faker.py  login.py  netdisk.py  stream.py  user.py  utils.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: base.py  common.py  user.py
backend/app/utils/: email.py
backend/prisma/: partial_types.py  schema.prisma  seed.py
backend/prisma/migrations/20240718060711_/: migration.sql
backend/prisma/migrations/20240730114346_faker/: migration.sql
backend/prisma/migrations/20240812090348_/: migration.sql
backend/workspace/tools/code_interpreter/: kernel_connection_file_26aa2d7d-ab5c-4405-b3c0-e7f6b478d54d_63387.json  kernel_connection_file_42021780-86ff-4290-83a6-7cc6b3f22b95_49965.json  kernel_connection_file_6f19f7ea-dfed-4433-a139-8f6b33747905_39570.json  kernel_connection_file_91a16291-fa87-4ce0-b5c4-4c5415cc7bf4_63670.json
backend/workspace/tools/doc_parser/: 9144a708dcfc5a2397ce55d774f26ce974f1b45773ead4938b0dcea8a0992a0c_without_chunking
(+217 files in other folders)
